fix: center align login

--- a/scripts/src/common/Login/Login.scss
+++ b/scripts/src/common/Login/Login.scss
@@ -4,4 +4,5 @@
   }
   max-width: 400px;
   margin: auto;
+  text-align: center;
 }
